<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewOrderActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/pickUp"
        android:layout_width="347dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="13dp"
        android:hint="Pickup Location"
        android:textCursorDrawable="@drawable/cursor"
        app:layout_constraintBottom_toTopOf="@+id/dropOff"
        app:layout_constraintEnd_toStartOf="@+id/pick_up_img"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_layout"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/drop_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="308dp"
        app:layout_constraintBottom_toTopOf="@+id/next_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_location_on_24" />

    <ImageView
        android:id="@+id/pick_up_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="23dp"
        app:layout_constraintBottom_toTopOf="@+id/drop_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_img"
        app:srcCompat="@drawable/ic_baseline_location_on_24" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/dropOff"
        android:layout_width="347dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="308dp"
        android:hint="Dropoff Location"
        android:textCursorDrawable="@drawable/cursor"
        app:layout_constraintBottom_toTopOf="@+id/next_btn"
        app:layout_constraintEnd_toStartOf="@+id/drop_img"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/receiver_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:boxStrokeColor="#2196F3"
        app:hintTextColor="#2196F3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/receiver_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/receiver_name"
            android:textCursorDrawable="@drawable/cursor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:enabled="false"
        app:boxStrokeColor="#2196F3"
        app:hintTextColor="#2196F3"
        app:layout_constraintEnd_toStartOf="@+id/date_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receiver_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pick_up_date" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/date_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/date_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/date_layout"
        app:srcCompat="@drawable/ic_date"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/time_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:enabled="false"
        app:boxStrokeColor="#2196F3"
        app:hintTextColor="#2196F3"
        app:layout_constraintEnd_toStartOf="@+id/time_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/time_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pick_up_time" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/time_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/time_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/time_layout"
        app:srcCompat="@drawable/ic_date"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/next_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/cream"
        android:text="@string/next"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="145dp"
        android:layout_height="36dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="256dp"
        android:layout_marginBottom="11dp"
        android:text="Remind me"
        android:textColor="@color/white"
        app:iconTint="#DD0B0B"
        app:layout_constraintBottom_toTopOf="@+id/pickUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_layout"
        app:rippleColor="#FFFFFF" />

</androidx.constraintlayout.widget.ConstraintLayout>